# overthink

./: .gitignore  .pylintrc  DISCLAIMER.md  LICENSE  README.md  example.ipynb  example.py  example_film.py  main.py  pyproject.toml
block/: __init__.py  feature_mix.py  film.py  forecast.py  temporal_mix.py  trans_block.py  trans_stack.py  transformer.py  trend_loss.py
example_data/: finance_fixed.csv
examples/: ema_config.json  example.ipynb  example.py  example_film.py  example_simple.py  train_ema_tokens.py
layer/: __init__.py  attention.py  embed.py  forecast.py  linear.py  rms.py  rope.py  swiglu.py  utils.py
model/: __init__.py  model_config.py  overthink.py
src/overthink/: __init__.py
src/overthink/block/: feature_mix.py  film.py  forecast.py  temporal_mix.py  transformer.py  trend_loss.py
src/overthink/data/: dataset_df.py  forecast.py
src/overthink/layer/: __init__.py  attention.py  linear.py  swiglu.py  utils.py
src/overthink/model/: __init__.py  overthink.py  overthink_simple.py  simple_config.py
