[project]
name = "overthink"
version = "0.1.0"
description = "A Hierarchical Reasoning Framework for Stock Market Forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.3",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.2"]
